Create a users endpoint

--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -4,7 +4,7 @@
   <ul class="homepage__all">
     <% users.forEach(user => { %>
     <li class="homepage__all--user">
-      <img src="<%= user.avatarUrl %>" />
+      <img src="<%= users.avatarUrl %>" />
     </li>
     <% }) %>
   </ul>
