Create the Profile Page and render it

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -1,3 +1,5 @@
 <%- include('../partials/header') %>
-<div class="profile-page"></div>
+<div class="profile-page">
+  <%= user.name %>
+</div>
 <%- include('../partials/footer') %>
