Create the HTML and CSS for the Profile page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Facespace</title>
-  <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-  <header class="header">
-      <h1 class='site-title'>Facespace</h1>
-  </header>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Facespace</title>
+    <link rel="stylesheet" href="/css/styles.css" />
+  </head>
+  <body class="profile-page">
+    <header class="header">
+      <h1 class="site-title">Facespace</h1>
+    </header>
+  </body>
+</html>
