--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -1,16 +1,24 @@
 <%- include('../partials/header') %>
 <div class="profile-page">
-  <%= user.name %>
-</div>
-<div>
-  <h3><%= user.name %>'s Friends</h3>
-  <ul>
-    <!-- loop over the array of friends -->
-    <!-- each friend's image and name should be visible. -->
-    <% userFriends.forEach((userFriend) => { %>
-    <li><img src="<%- userFriend.avatarUrl %>" /></li>
-    <li><%- userFriend.name %></li>
-    <% }) %>
-  </ul>
+  <div class="profile-page--banner"></div>
+  <div class="profile-page__user">
+    <img src="<%= user.avatarUrl %>" class="profile-page__user--avatar" />
+    <h2><%= user.name %></h2>
+  </div>
+  <div>
+    <div class="profile-page__friends">
+      <h3><%= user.name %>'s Friends</h3>
+      <ul class="profile-page__friends--list">
+        <!-- loop over the array of friends -->
+        <!-- each friend's image and name should be visible. -->
+        <% userFriends.forEach((userFriend) => { %>
+        <li class="friend">
+          <img src="<%- userFriend.avatarUrl %>" />
+          <p><%- userFriend.name %></p>
+        </li>
+        <% }) %>
+      </ul>
+    </div>
+  </div>
 </div>
 <%- include('../partials/footer') %>
