Render the signin page + added CSS

--- a/views/pages/signin.ejs
+++ b/views/pages/signin.ejs
@@ -1,9 +1,14 @@
 <%- include('../partials/header') %>
-<div>
-  <form method="get" action="/getname">
-    <label for="firstName">First name</label>
-    <input type="text" name="firstName" placeholder="Your first name" />
-    <button type="submit">Submit</button>
+<div class="signin-page">
+  <form method="get" action="/getname" class="signin-page__form">
+    <label for="firstName" class="signin-page__form--label">First name</label>
+    <input
+      type="text"
+      name="firstName"
+      placeholder="Your first name"
+      class="signin-page__form--input"
+    />
+    <button type="submit" class="signin-page__form--button">Submit</button>
   </form>
 </div>
 <%- include('../partials/footer') %>
