A link to the signin page in the header

--- a/public/css/components/header.css
+++ b/public/css/components/header.css
@@ -4,6 +4,7 @@
   padding: 0 var(--page-horizontal-padding);
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .header h1 {
   color: #fff;
