Faces on the homepage + added hover effect

--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -4,7 +4,9 @@
   <ul class="homepage__all">
     <% users.forEach(user => { %>
     <li class="homepage__all--user">
-      <img src="<%- user.avatarUrl %>" />
+      <a href="/users/<%- user._id %>" class="image-hover"
+        ><img src="<%- user.avatarUrl %>"
+      /></a>
     </li>
     <% }) %>
   </ul>
