--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,3 +35,11 @@ header a {
   font-weight: 300;
   line-height: 1.5em;
 }
+
+.image-hover {
+  opacity: 1;
+}
+
+.image-hover img:hover {
+  opacity: 0.5;
+}
