Setting up My Friends and No Sign in for you

--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -4,9 +4,16 @@
   <ul class="homepage__all">
     <% users.forEach(user => { %>
     <li class="homepage__all--user">
-      <a href="/users/<%- user._id %>" class="image-hover"
-        ><img src="<%- user.avatarUrl %>"
+      <% if (currentUser.hasOwnProperty('friends') &&
+      currentUser.friends.includes(user._id)) { %>
+      <a href="/users/<%- user._id %>" class="image-hover">
+        <img src="<%- user.avatarUrl %>" class="friendBanner"
       /></a>
+      <% } else { %>
+      <a href="/users/<%- user._id %>" class="image-hover">
+        <img src="<%- user.avatarUrl %>"
+      /></a>
+      <% } %>
     </li>
     <% }) %>
   </ul>
